--- a/style/styles.css
+++ b/style/styles.css
@@ -62,13 +62,19 @@ textarea {
     background-color: rgb(59, 163, 170);
     color: white;
     padding: 10px 100px;
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-left: 30px
 }
 
 input::placeholder {
     font-size: 20px;
     position: relative;
     right: -200px;
+}
+
+.head {
+    position: relative;
+    top: -5px;
 }
 
 footer {
@@ -90,9 +96,13 @@ input:focus {
         text-align: center;
     }
 
+   
+
     .form1 {
         display: flex;
         flex-direction: row;
+        text-align: center;
+
     }
     
     .form1 label {
@@ -109,5 +119,28 @@ input:focus {
         margin-left: 220px;
     }
 
+    .form1 input, textarea {
+        width: 100%;
+
+    }
+
+    input::placeholder {
+        font-size: 20px;
+        position: relative;
+        right: -430px;
+    }
+
     
+}
+
+@media (min-width: 1025px) {
+    .button {
+        margin-left: 480px;
+    }
+
+    input::placeholder {
+        font-size: 20px;
+        position: relative;
+        right: -950px;
+    }
 }
