--- a/style/styles.css
+++ b/style/styles.css
@@ -95,6 +95,17 @@ input:focus {
         text-align: center;
     }
 
+    form {
+        width: 80%;
+        margin: auto;
+        
+    }
+
+    hr.top {
+        border: 1px solid rgb(23, 23, 53);
+        width: 80%;
+    }
+
    
 
     .form1 {
@@ -114,19 +125,22 @@ input:focus {
         padding-right: 50px;
     }
 
-    .button {
-        margin-left: 220px;
-    }
-
-    .form1 input, textarea {
-        width: 100%;
-
-    }
-
     input::placeholder {
         font-size: 20px;
         position: relative;
-        right: -430px;
+        right:  -300px;
+    }
+
+    .button {
+        width: 98%;
+    }
+
+    .form1 input {
+        width: 70%
+    }
+
+    textarea {
+        width: 100%
     }
 
     
@@ -134,12 +148,13 @@ input:focus {
 
 @media (min-width: 1025px) {
     .button {
-        margin-left: 480px;
+        margin: auto;
     }
 
     input::placeholder {
         font-size: 20px;
         position: relative;
-        right: -700px;
+        right: -450px;
     }
+
 }
